feedback tickets completed

--- a/backend/src/infrastructure/templates/budgetary-offer.hbs
+++ b/backend/src/infrastructure/templates/budgetary-offer.hbs
@@ -110,7 +110,7 @@
 <body>
     <div class="main-content">
         <div class="header">
-            <div class="company-name">EMPRISE MARKETING</div>
+            <div class="company-name">EMPRISE UNIVORA</div>
             <div class="company-address">B-1/31, Sector H, Aliganj</div>
             <div class="company-address">Lucknow - 226024 (India)</div>
             <div class="company-address">Tele Fax: (0522) 4017682 | E-mail: emprisemarketing@hotmail.com</div>
@@ -172,7 +172,7 @@
         <div class="signature-section">
             <div>Thanking you & ensuring best service always.</div>
             <div>Yours faithfully</div>
-            <div>For: EMPRISE MARKETING</div>
+            <div>For: EMPRISE UNIVORA</div>
             <br>
             <div>(Authorized Signatory)</div>
         </div>
