--- a/backend/src/infrastructure/templates/purchase-order original backup.hbs
+++ b/backend/src/infrastructure/templates/purchase-order original backup.hbs
@@ -38,7 +38,7 @@
 
         .process-info {
             font-size: 8pt;
-            border: px solid #000;
+            border: 1px solid #000;
             padding: 1.5mm;
         }
 
@@ -195,13 +195,14 @@
         <!-- Header Section -->
         <div class="header-section">
             <div class="process-info">
-                {{!-- <img src="{{baseUrl}}/static/favicon.ico" alt="Emprise Logo" width="45"> --}}
-                {{!-- <img src="{{{baseURL}}}/static/favicon.ico" alt="Emprise Logo" width="45"> --}}
-                <img src="data:image/x-icon;base64,{{baseURL}}" width="30" alt="Emprise Logo" />
-
+                Process Manual<br>
+                Process Code: PUR
             </div>
             <div class="title">PURCHASE ORDER</div>
-
+            <div class="section-info">
+                Section No. : 00<br>
+                Revision No. : 00
+            </div>
         </div>
 
         <!-- Details Grid -->
@@ -217,7 +218,7 @@
 
             <div class="box">
                 <div class="bold">Bill To,</div>
-                M/s. Emprise Marketing<br>
+                M/s. Emprise Univora<br>
                 B-1/31 Sector-H, Aliganj<br>
                 Lucknow - 226024<br>
                 Uttar Pradesh<br>
@@ -226,16 +227,8 @@
 
             <div class="box details-box">
                 <div><span class="bold">P.O. No.: </span>{{poNumber}}</div>
-                <div><span class="bold">PO Date: </span>{{formatDate createdAt}}</div>
-                <div><span class="bold">Customer Order Reference: </span>{{loaNumber}}</div>
-                <div>
-                    <span class="bold">Customer Order Date: </span>
-                    {{#if customerOrderDate}}
-                    {{formatDate customerOrderDate}}
-                    {{else}}
-                    <span>-</span>
-                    {{/if}}
-                </div>
+                <div><span class="bold">LOA No.: </span>{{loaNumber}}</div>
+                <div><span class="bold">Date: </span>{{formatDate createdAt}}</div>
             </div>
         </div>
 
@@ -319,15 +312,15 @@
         <div class="terms-section">
             <div class="bold">Terms and Conditions</div>
 
-            {{!-- <ol style="margin: 0.8mm 0 0 2mm; padding-left: 6mm;"> --}}
+            <ol style="margin: 0.8mm 0 0 2mm; padding-left: 6mm;">
                 {{{termsConditions}}}
-                {{!-- </ol> --}}
+            </ol>
         </div>
 
         <!-- Footer Section -->
         <div class="footer-section">
             <div class="signature-box">
-                <div class="bold">FOR EMPRISE MARKETING</div>
+                <div class="bold">FOR EMPRISE UNIVORA</div>
                 <br>
                 {{createdBy.name}}<br>
                 {{createdBy.department}}<br>
@@ -341,7 +334,7 @@
         </div>
 
         <!-- Notes Section (FIXED!!) -->
-        {{!-- <div class="notes-box">
+        <div class="notes-box">
             <div class="bold">Notes</div>
             <ol style="margin: 0.8mm 0 0 2mm; padding-left: 6mm;">
                 <li>Please send shipment with OEM WTC and GC.</li>
@@ -351,7 +344,7 @@
                 {{{notes}}}
                 {{/if}}
             </ol>
-        </div> --}}
+        </div>
     </div>
 </body>
 
